Integrate fabrknt.com domain across codebase
- Update package.json homepage to https://fabrknt.com
- Add canonical URL and Twitter Card meta tags to website
- Add website link to README.md header
- Update BUSINESS_PLAN.md website field
- Add website links to documentation support sections (GUARD, RISK, PRIVACY)
- Update marketing knowledge base contact information

--- a/website/index.html
+++ b/website/index.html
@@ -7,11 +7,20 @@
     <meta name="keywords" content="Solana, DeFi, AI Agents, Blockchain, SDK, Security, Privacy, Smart Contracts">
     <meta name="author" content="Fabrknt">
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://fabrknt.com/">
+
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://fabrknt.com/">
     <meta property="og:title" content="Fabrknt - The Precision Execution Stack">
     <meta property="og:description" content="Solana-First, Cross-Chain Enabled. Master parallel execution with absolute precision.">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@fabrknt">
+    <meta name="twitter:title" content="Fabrknt - The Precision Execution Stack">
+    <meta name="twitter:description" content="Solana-First, Cross-Chain Enabled. Master parallel execution with absolute precision.">
 
     <title>Fabrknt - The Precision Execution Stack</title>
     <link rel="stylesheet" href="assets/css/styles.css">
